<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_gravity="center"
        android:text="@string/main_activity" />

    <Button
        android:id="@+id/btn_to_multi_fragment_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multi_fragment_activity" />

    <Button
        android:id="@+id/btn_to_collection_pager_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/collection_pager_activity" />

    <Button
        android:id="@+id/btn_to_interface_top_bottom_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/interface_top_bottom_activity" />

    <Button
        android:id="@+id/btn_to_public_top_bottom_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/public_top_bottom_activity" />

</LinearLayout>